Fix empty metadata display align (portrait)

--- a/src/common/MetadataPanel.scss
+++ b/src/common/MetadataPanel.scss
@@ -185,7 +185,6 @@
       }
 
       @media all and (orientation: portrait) {
-        height: auto;
         margin-top: 0;
       }
     }
